--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,39 @@
 @tailwind components;
 @tailwind utilities;
 
+/* post add css  */
+.tooltip {
+  position: relative; /* Necessary to position the tooltip within the container */
+}
+
+.tooltiptext {
+  visibility: hidden; /* Initially hide the tooltip */
+
+  position: absolute; /* Position the tooltip relative to its parent */
+
+  background-color: #555;
+
+  color: white;
+
+  text-align: center;
+
+  padding: 5px 0;
+
+  border-radius: 6px;
+
+  z-index: 1; /* Ensure tooltip stays on top */
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible; /* Show the tooltip when hovering over the parent element */
+}
+
+/* icons  */
+.material-symbols-rounded {
+  @apply w-[1em] h-[1em] overflow-hidden;
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+}
+
 /* google  button css */
 
 .button {
