--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -178,7 +178,8 @@ form.sign-in-form {
   top: -10%;
   right: 48%;
   transform: translateY(-50%);
-  background-image: linear-gradient(-45deg, #002f6c 0%, #ff6f61 100%);
+  background: #833ab4;
+  background: linear-gradient(to right, #833ab4, #fd1d1d, #fcb045);
   transition: 1.8s ease-in-out;
   border-radius: 50%;
   z-index: 6;
